@@ -348,6 +348,7 @@ extern "C"
             uncheckedResources_.insert("/osimis-viewer/config.js");
 
             tokens_.insert(OrthancPlugins::Token(OrthancPlugins::TokenType_HttpHeader, "token"));
+            tokens_.insert(OrthancPlugins::Token(OrthancPlugins::TokenType_GetArgument, "token"));  // for download links
           }
 
           if (standardConfigurations.find("stone-webviewer") != standardConfigurations.end())
